# opencode-vibe-stack

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  HardFlow 框架优化方案：兼顾管控与灵活.md  HardFlow框架：基于LangGraph的确定性OpenCode工作流编排系统（扩展方案）.md  LICENSE  README.md  install.ps1  install.sh  oh-my-openagent.config.example.jsonc  opencode.config.example.json  pyproject.toml  tui.config.example.json  使用指南.md
.codegraph/: daemon.pid
.opencode/: .vibe-stack-active.json  oh-my-openagent.jsonc
.opencode/agents/: architect.md
combinations/dcc-plugin-suite/: combination.opencode.md
combinations/game-asset-pipeline/: combination.opencode.md
combinations/unity-toolchain/: combination.opencode.md
core/: config.opencode.md  domain.config  mcp-config.json
core/agents/: QuickQA.md  QuickQA.opencode.md  agent-registry.md  atlas.md  dynamic-orchestrator.md  hermes.md  librarian.md  momus.md  multimodal-looker.md  oracle.md  prometheus.md  qa-expert.opencode.md  sisyphus-junior.md  sisyphus.md  vibe-stack-agent.md
core/combinator/: engine.opencode.md
core/commands/: auto-git-commit.md  start-work.md  vibe-stack.md  workspace_init.md
core/mcp/: codebase-memory.json  codegraph.json  docsetmcp.opencode.md  filesystem.opencode.md  git.opencode.md  grep_app_official.json  mcp-config.json  parallel-search.json  registry-template.jsonc
core/rules/: 00-global.md  01-agent-workflow.md  global.md  global.opencode.md  repo-info.opencode.md
core/skills/: code-refactor.opencode.md  code-review.opencode.md  debugging.opencode.md
core/tools/: .gitkeep
script/: config_manager.py
scripts/: deploy.ps1  deploy.sh  new-project.ps1  update-stack.ps1
src/vibe_stack/: __init__.py  config.py  constants.py  errors.py  install.py  manifest.py  mcp.py  registry.py  (+3 more)
stacks/: aaa-pipeline.json  ai-training.json  dcc.json  game-dev.json  indie-game.json
tests/: conftest.py
tools/data-forge/: .gitignore  AGENTS.md  README.md  build.md  data-forge.spec  hook-mcp.py  pyproject.toml
tools/data-forge/.github/workflows/: build.yml
tools/data-forge/src/data_forge/: __init__.py  main.py
tools/data-forge/src/data_forge/mcp/: __init__.py  server.py
tools/data-forge/src/data_forge/tools/: __init__.py  _alpha.py  caption.py  comfyui.py  convert.py  fill_background.py  llm.py  ollama.py  remove_bg.py  resize.py
tools/data-forge/tests/: test_alpha.py  test_caption.py  test_comfyui.py  test_convert.py  test_fill_background.py  test_llm.py  test_ollama.py  test_remove_bg.py  test_resize.py
项目架构/: 架构.md
(+337 files in other folders)
