[project]
name = "vibe-stack"
version = "0.2.0"
description = "分层 AI 智能体配置管理工具"
requires-python = ">=3.11"
authors = [
    { name = "vibe-stack contributors" },
]

[project.scripts]
vibe-stack = "vibe_stack.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_stack"]

[tool.uv]
package = true
dev-dependencies = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# basetemp removed — not supported in pytest 9+
